--- a/app/jade/_header.jade
+++ b/app/jade/_header.jade
@@ -7,31 +7,31 @@
     .background
     ul.header__panel
       li.header__item
-        a(href="/bus")
+        a(href="/#/bus")
           span.header__button
             span.header__buttonIconBG
               .header__buttonIcon.fa.fa-bus
             | Autobusy
       li.header__item
-        a(href="/busstop")
+        a(href="/#/busstop")
           span.header__button
             span.header__buttonIconBG
               .header__buttonIcon.fa.fa-map-signs
             | Przystanki
       li.header__item
-        a(href="/roads")
+        a(href="/#/roads")
           span.header__button
             span.header__buttonIconBG
               .header__buttonIcon.fa.fa-road
             | Trasy
       li.header__item
-        a(href="/user")
+        a(href="/#/user")
           span.header__button
             span.header__buttonIconBG
               .header__buttonIcon.fa.fa-users
             | Użytkownicy
       li.header__item
-        a(href="/controls")
+        a(href="/#/controls")
           span.header__button
             span.header__buttonIconBG
               .header__buttonIcon.fa.fa-eye
@@ -45,37 +45,37 @@
     .background
     ul.headerProfile__panel
       li.headerProfile__item
-        a(href="/login")
+        a(href="/#/login")
           span.headerProfile__button
             span.headerProfile__buttonIconBG
               .headerProfile__buttonIcon.fa.fa-power-off
             | Logowanie
       li.headerProfile__item
-        a(href="/register")
+        a(href="/#/register")
           span.headerProfile__button
             span.headerProfile__buttonIconBG
               .headerProfile__buttonIcon.fa.fa-sign-in
             | Rejestracja
       li.headerProfile__item
-        a(href="/forgot")
+        a(href="/#/forgot")
           span.headerProfile__button
             span.headerProfile__buttonIconBG
               .headerProfile__buttonIcon.fa.fa-key
             | Odzyskaj konto
       li.headerProfile__item
-        a(href="/myaccount")
+        a(href="/#/myaccount")
           span.headerProfile__button
             span.headerProfile__buttonIconBG
               .headerProfile__buttonIcon.fa.fa-user
             | Moje Konto
       li.headerProfile__item
-        a(href="/info")
+        a(href="/#/info")
           span.headerProfile__button
             span.headerProfile__buttonIconBG
               .headerProfile__buttonIcon.fa.fa-info-circle
             | Informacje
       li.headerProfile__item
-        a(href="/login")
+        a(href="/#/login")
           span.headerProfile__button
             span.headerProfile__buttonIconBG
               .headerProfile__buttonIcon.fa.fa-sign-out
