--- a/app/jade/panelDodajAutobus.jade
+++ b/app/jade/panelDodajAutobus.jade
@@ -2,13 +2,13 @@
   .panelDodajAutobus__title Dodaj Autobus
   .panelDodajAutobus__fastTravel
     span
-      a(href="/")
+      a(href="/#/")
         i.fa.fa-home
         | Home
     span
       a(href="/bus") Zarządzanie Autobusami
     span.-active
-      a(href="/bus/add") Dodaj Autobus
+      a(href="/#/bus/add") Dodaj Autobus
   .panelDodajAutobus__wrapper
     .panelDodajAutobus__subtitle Dodawanie pojazdu do floty
     .panelDodajAutobus__text Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse vitae euismod lorem, vel commodo orci.
@@ -16,10 +16,10 @@
     .panelDodajAutobus__content__form
         .panelDodajAutobus__content__form__item
           span.item Numer Rejestracyjny
-          input(placeholder="Podaj Nr. Rejestracyjny")
+          input(placeholder="Numer Rejestracyjny")
         .panelDodajAutobus__content__form__item
           span.item Numer VIN
-          input(placeholder="Podaj Nr. VIN")
+          input(placeholder="Numer VIN")
         .panelDodajAutobus__content__form__item
           span.item Typ Autobusu
           select
@@ -32,5 +32,5 @@
             option(value=1) Tak
     .panelDodajAutobus__navigation
       button.green.panelDodajAutobus__navigation__item.green Dodaj Autobus
-      a(href="/bus").panelDodajAutobus__navigation__item.gray.-abort Anuluj
+      a(href="/#/bus").panelDodajAutobus__navigation__item.gray.-abort Anuluj
 
