--- a/app/jade/panelDodajPrzystanek.jade
+++ b/app/jade/panelDodajPrzystanek.jade
@@ -21,6 +21,11 @@
           span.item Lokalizacja
           input(placeholder="Podaj ulice")
         .panelDodajPrzystanek__content__form__item
+          span.item Czy ma biletomat?
+          select
+            option(value=0) Nie
+            option(value=1) Tak
+        .panelDodajPrzystanek__content__form__item
           span.item Współrzędne X
           input(placeholder="Podaj koordynat X")
         .panelDodajPrzystanek__content__form__item
