--- a/app/jade/panelAutobusy.jade
+++ b/app/jade/panelAutobusy.jade
@@ -1,5 +1,5 @@
 .panelAutobusy
-  .panelAutobusy__title Zarządzanie autobusami
+  .panelAutobusy__title Zarządzanie Autobusami
   .panelAutobusy__fastTravel
     span
       a(href="/#/")
