--- a/app/jade/panelDodajPrzystanek.jade
+++ b/app/jade/panelDodajPrzystanek.jade
@@ -10,27 +10,27 @@
     span.-active
       a(href="/#/busstop/add") Dodaj Przystanek
   .panelDodajPrzystanek__wrapper
-    .panelDodajPrzystanek__subtitle Dodawanie przystankow floty
+    .panelDodajPrzystanek__subtitle Dodawanie przystanku floty
     .panelDodajPrzystanek__text Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse vitae euismod lorem, vel commodo orci.
 
     .panelDodajPrzystanek__content__form
         .panelDodajPrzystanek__content__form__item
-          span.item Nazwa przystanku
-          input(placeholder="Podaj nazwe przystanku")
+          span.item Nazwa Przystanku
+          input(placeholder="Nazwa Przystanku")
         .panelDodajPrzystanek__content__form__item
-          span.item Lokalizacja
-          input(placeholder="Podaj ulice")
+          span.item Ulica
+          input(placeholder="Ulica")
         .panelDodajPrzystanek__content__form__item
-          span.item Czy ma biletomat?
+          span.item Typ Przystanku
           select
-            option(value=0) Nie
-            option(value=1) Tak
+            option(value=0) Normalny
+            option(value=1) Zabudowany
         .panelDodajPrzystanek__content__form__item
-          span.item Współrzędne X
-          input(placeholder="Podaj koordynat X")
+          span.item Koordynat Lat
+          input(placeholder="Lat")
         .panelDodajPrzystanek__content__form__item
-          span.item Współrzędne Y
-          input(placeholder="Podaj koordynat Y")
+          span.item Koordynat Lng
+          input(placeholder="Lng")
         .panelDodajPrzystanek__content__form__item
           span.item Czy ma biletomat?
           select
