--- a/app/jade/panelPrzystanki.jade
+++ b/app/jade/panelPrzystanki.jade
@@ -1,5 +1,5 @@
 .panelPrzystanki
-  .panelPrzystanki__title Zarządzanie przystankami
+  .panelPrzystanki__title Zarządzanie Przystankami
   .panelPrzystanki__fastTravel
     span
       a(href="/#/")
