--- a/app/blocks/panelPrzystanki/_panelPrzystanki.sass
+++ b/app/blocks/panelPrzystanki/_panelPrzystanki.sass
@@ -115,6 +115,9 @@
     td
       text-align: center
       padding: 5px
+      &.-alert
+        color: #2196F3
+        padding: 15px 0
     .navigation
       margin: 3px 5px
       cursor: pointer
