--- a/app/blocks/panelUsers/_panelUsers.sass
+++ b/app/blocks/panelUsers/_panelUsers.sass
@@ -44,6 +44,7 @@
     font-size: 1.5em
     line-height: 1.6em
     border-bottom: 1px solid rgba(0,0,0,0.3)
+    margin-top: 20px
   &__text
     color: #88969F
     padding: 5px
@@ -114,6 +115,9 @@
     td
       text-align: center
       padding: 5px
+      &.-alert
+        color: #2196F3
+        padding: 15px 0
     .navigation
       margin: 3px 5px
       cursor: pointer
