--- a/app/blocks/panelDodajUser/_panelDodajUser.sass
+++ b/app/blocks/panelDodajUser/_panelDodajUser.sass
@@ -14,6 +14,10 @@
     text-transform: uppercase
     +Roboto
     font-size: 0.7em
+    background-color: white
+    position: absolute
+    z-index: 1
+    width: 100%
     span
       &:after
         content: '\f054'
@@ -43,12 +47,15 @@
     display: none
 
   &__wrapper
-    position: relative
-    padding: 20px
-    +TAB_MAX
-      overflow: scroll
+    padding: 15px
+    overflow-x: scroll
+    position: absolute
+    bottom: 0
+    top: 50px
+    height: 80vh
   &__subtitle
     +Roboto
+    margin-top: 20px
     color: #22282B
     font-size: 1.5em
     line-height: 1.6em
@@ -82,6 +89,7 @@
     flex-direction: row
     +PHONE_ONLY
       justify-content: center
+      flex-wrap: wrap
     &__item
       flex-basis: 50%
       flex-grow: 1
@@ -98,6 +106,11 @@
       margin-right: 5px
       text-decoration: none !important
       text-align: center
+      +PHONE_ONLY
+        flex-basis: 100%
+        max-width: 100%
+        margin: 10px 0
+        height: 40px
       &:hover
         background: rgba(60, 141, 188, 1)
       &.green
@@ -124,7 +137,8 @@
       flex-wrap: wrap
       justify-content: flex-start
       &__item
-
+        +PHONE_ONLY
+          flex-basis: 100%
         &.check
           flex-basis: auto
           text-align: center
