--- a/app/blocks/panels/_panels.sass
+++ b/app/blocks/panels/_panels.sass
@@ -18,6 +18,7 @@
     line-height: 40px
     cursor: pointer
     animation: MoveLeftLink ease 1s infinite
+    z-index: 2
     +PHONE_ONLY
       top: 40px
       a
