--- a/app/blocks/panelWyswietlAutobus/_panelWyswietlAutobus.sass
+++ b/app/blocks/panelWyswietlAutobus/_panelWyswietlAutobus.sass
@@ -15,6 +15,10 @@
     text-transform: uppercase
     +Roboto
     font-size: 0.7em
+    background-color: white
+    position: absolute
+    z-index: 1
+    width: 100%
     span
       &:after
         content: '\f054'
@@ -44,12 +48,15 @@
     display: none
 
   &__wrapper
-    position: relative
-    padding: 20px
-    +TAB_MAX
-      overflow: scroll
+    padding: 15px
+    overflow-x: scroll
+    position: absolute
+    bottom: 0
+    top: 50px
+    height: 80vh
   &__subtitle
     +Roboto
+    margin-top: 20px
     color: #22282B
     font-size: 1.5em
     line-height: 1.6em
@@ -85,6 +92,7 @@
     flex-direction: row
     +PHONE_ONLY
       justify-content: center
+      flex-wrap: wrap
     &__item
       flex-basis: 50%
       flex-grow: 1
@@ -101,6 +109,11 @@
       margin-right: 5px
       text-decoration: none !important
       text-align: center
+      +PHONE_ONLY
+        flex-basis: 100%
+        max-width: 100%
+        margin: 10px 0
+        height: 40px
       &:hover
         background: rgba(60, 141, 188, 1)
       &.green
@@ -146,6 +159,8 @@
         flex-basis: 33%
         padding: 10px
         margin: 5px 0
+        +PHONE_ONLY
+          flex-basis: 100%
         .itemHeader
           font-weight: 500
           display: block
