--- a/app/blocks/panelWyswietlPrzystanek/_panelWyswietlPrzystanek.sass
+++ b/app/blocks/panelWyswietlPrzystanek/_panelWyswietlPrzystanek.sass
@@ -15,6 +15,10 @@
     text-transform: uppercase
     +Roboto
     font-size: 0.7em
+    background-color: white
+    position: absolute
+    z-index: 1
+    width: 100%
     span
       &:after
         content: '\f054'
@@ -44,10 +48,12 @@
     display: none
 
   &__wrapper
-    position: relative
-    padding: 20px
-    +TAB_MAX
-      overflow: scroll
+    padding: 15px
+    overflow-x: scroll
+    position: absolute
+    bottom: 0
+    top: 50px
+    height: 80vh
   &__subtitle
     +Roboto
     color: #22282B
@@ -85,6 +91,7 @@
     flex-direction: row
     +PHONE_ONLY
       justify-content: center
+      flex-wrap: wrap
     &__item
       flex-basis: 50%
       flex-grow: 1
@@ -101,6 +108,11 @@
       margin-right: 5px
       text-decoration: none !important
       text-align: center
+      +PHONE_ONLY
+        flex-basis: 100%
+        max-width: 100%
+        margin: 10px 0
+        height: 40px
       &:hover
         background: rgba(60, 141, 188, 1)
       &.green
@@ -136,7 +148,8 @@
       flex-wrap: wrap
       justify-content: flex-start
       &__item
-
+        +PHONE_ONLY
+          flex-basis: 100%
         &.check
           flex-basis: auto
           text-align: center
