--- a/app/blocks/panelPrzystanki/_panelPrzystanki.sass
+++ b/app/blocks/panelPrzystanki/_panelPrzystanki.sass
@@ -43,7 +43,7 @@
           font-weight: 500
   &__wrapper
     padding: 15px
-    overflow-x: scroll
+    overflow-y: scroll
     position: absolute
     bottom: 0
     top: 50px
