--- a/app/blocks/panelWyswietlAutobus/_panelWyswietlAutobus.sass
+++ b/app/blocks/panelWyswietlAutobus/_panelWyswietlAutobus.sass
@@ -49,7 +49,7 @@
 
   &__wrapper
     padding: 15px
-    overflow-x: scroll
+    overflow-y: scroll
     position: absolute
     bottom: 0
     top: 50px
